# munkres-cpp

./: CMakeLists.txt  README.md
cmake/: MunkresConfig.cmake.in
examples/: CMakeLists.txt  example_01.cpp  example_02.cpp  example_03.cpp  example_04.cpp  example_05.cpp  example_06.cpp  example_07.cpp  example_08.cpp  example_09.cpp
src/munkres-cpp/: matrix.h  matrix_base.h  munkres.h
src/munkres-cpp/adapters/: matrix_armadillo.h  matrix_boost.h  matrix_eigen.h  matrix_opencv.h  matrix_qt.h
